feat: adiciona tabela de simbolos e jornada visual